--- a/.github/workflows/preview-docs-teardown.yml
+++ b/.github/workflows/preview-docs-teardown.yml
@@ -12,7 +12,7 @@ jobs:
       pull-requests: write # Required to update PR status comment
     steps:
       - name: Teardown Surge.sh preview (docs)
-        id: deploy
+        id: teardown-docs
         run: npx surge teardown https://quarkiverse-roq-docs-${{ github.event.number }}-preview.surge.sh --token ${{ secrets.SURGE_TOKEN }} || true
       - name: Update PR status comment
         uses: quarkusio/action-helpers@main
@@ -25,7 +25,7 @@ jobs:
           body-marker: <!-- Preview status comment marker -->
 
       - name: Teardown Surge.sh preview (blog)
-        id: deploy
+        id: teardown-blog
         run: npx surge teardown https://quarkiverse-roq-blog-${{ github.event.number }}-preview.surge.sh --token ${{ secrets.SURGE_TOKEN }} || true
       - name: Update PR status comment
         uses: quarkusio/action-helpers@main
