--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <module>roq-frontmatter</module>
         <module>roq/runtime</module>
         <module>roq/deployment</module>
+        <module>roq/integration-tests</module>
         <module>plugin</module>
         <module>theme</module>
     </modules>
