--- a/plugin/aliases/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/plugin/aliases/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -1,5 +1,5 @@
-name: Roq Generator
-description: Command to run any Quarkus web application and extract it in a directory as purely static files (html and assets).
+name: Roq Plugin Aliases
+description: This plugin allows creating one or many aliases (redirections) for a page.
 metadata:
   keywords:
     - website
@@ -11,7 +11,11 @@ metadata:
     - site
     - generator
     - web
-  guide: https://docs.quarkiverse.io/quarkus-roq/dev/quarkus-roq-generator.html
+    - roq
+    - aliases
+    - redirect
+    - plugin
+  guide: https://docs.quarkiverse.io/quarkus-roq/dev/quarkus-roq-plugins.html#plugin-aliases
   icon-url: "https://raw.githubusercontent.com/quarkiverse/quarkus-roq/main/docs/modules/ROOT/assets/images/roq.svg"
   categories:
     - "web"
