--- a/common/deployment/pom.xml
+++ b/common/deployment/pom.xml
@@ -3,9 +3,9 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>io.quarkiverse.roq</groupId>
-        <artifactId>quarkus-roq-parent</artifactId>
+        <artifactId>quarkus-roq-common-parent</artifactId>
         <version>999-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>quarkus-roq-common-deployment</artifactId>
     <name>Quarkus Roq - Common - Deployment</name>
