--- a/common/runtime/pom.xml
+++ b/common/runtime/pom.xml
@@ -4,9 +4,9 @@
 
     <parent>
         <groupId>io.quarkiverse.roq</groupId>
-        <artifactId>quarkus-roq-parent</artifactId>
+        <artifactId>quarkus-roq-common-parent</artifactId>
         <version>999-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>quarkus-roq-common</artifactId>
     <name>Quarkus Roq - Common</name>
