--- a/pom.xml
+++ b/pom.xml
@@ -8,20 +8,18 @@
         <version>18</version>
     </parent>
     <groupId>io.quarkiverse.roq</groupId>
-    <artifactId>quarkus-roq-parent</artifactId>
+    <artifactId>quarkus-roq-project-parent</artifactId>
     <version>999-SNAPSHOT</version>
     <packaging>pom</packaging>
-    <name>Quarkus Roq - Parent</name>
+    <name>Quarkus Roq - Project - Parent</name>
     <description>Generate static websites out of your Quarkus web application.</description>
 
     <modules>
-        <module>common/runtime</module>
-        <module>common/deployment</module>
+        <module>common</module>
         <module>roq-generator</module>
         <module>roq-data</module>
         <module>roq-frontmatter</module>
-        <module>roq/runtime</module>
-        <module>roq/deployment</module>
+        <module>roq</module>
         <module>plugin</module>
         <module>theme</module>
     </modules>
@@ -105,7 +103,6 @@
             </activation>
             <modules>
                 <module>blog</module>
-                <module>roq/integration-tests</module>
             </modules>
         </profile>
     </profiles>
