--- a/roq/deployment/pom.xml
+++ b/roq/deployment/pom.xml
@@ -6,7 +6,7 @@
         <groupId>io.quarkiverse.roq</groupId>
         <artifactId>quarkus-roq-parent</artifactId>
         <version>999-SNAPSHOT</version>
-        <relativePath>../../pom.xml</relativePath>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>quarkus-roq-deployment</artifactId>
     <name>Quarkus Roq - Deployment</name>
