Introduce quarkus-roq-plugin-asciidoc
Fixes #169

--- a/blog/pom.xml
+++ b/blog/pom.xml
@@ -50,6 +50,11 @@
             <version>${quarkus-roq.version}</version>
         </dependency>
         <dependency>
+            <groupId>io.quarkiverse.roq</groupId>
+            <artifactId>quarkus-roq-plugin-asciidoc</artifactId>
+            <version>${quarkus-roq.version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
@@ -173,9 +178,6 @@
                     <name>standalone</name>
                 </property>
             </activation>
-            <properties>
-                <quarkus-roq.version>0.0.6</quarkus-roq.version>
-            </properties>
         </profile>
     </profiles>
 </project>
