--- a/blog/src/main/resources/application.properties
+++ b/blog/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 %gh-pages.site.url=https://pages.quarkiverse.io/
 %gh-pages.quarkus.http.root-path=/quarkus-roq/
 quarkus.web-bundler.dependencies.auto-import=all
+quarkus.log.category."io.quarkiverse.roq.frontmatter.deployment.scan".level=DEBUG
