--- a/roq-frontmatter/deployment/src/test/resources/application.properties
+++ b/roq-frontmatter/deployment/src/test/resources/application.properties
@@ -4,3 +4,5 @@ quarkus.http.root-path=/foo/
 site.url=https://mywebsite.com
 site.root-path=/bar/
 site.time-zone=UTC
+
+quarkus.log.category."io.quarkiverse.roq.frontmatter".level=DEBUG
