--- a/blog/pom.xml
+++ b/blog/pom.xml
@@ -64,6 +64,11 @@
             <version>1.7.3</version>
         </dependency>
         <dependency>
+            <groupId>io.quarkiverse.qute.web</groupId>
+            <artifactId>quarkus-qute-web-markdown-autolink</artifactId>
+            <version>3.2.2</version>
+        </dependency>
+        <dependency>
             <groupId>org.mvnpm</groupId>
             <artifactId>highlight.js</artifactId>
             <version>11.10.0</version>
