Add serie extension

--- a/blog/src/main/resources/application.properties
+++ b/blog/src/main/resources/application.properties
@@ -2,3 +2,4 @@
 %gh-pages.quarkus.http.root-path=/quarkus-roq/
 quarkus.web-bundler.dependencies.auto-import=all
 quarkus.log.category."io.quarkiverse.roq.frontmatter.deployment.scan".level=DEBUG
+quarkus.default-locale=en
