--- a/blog/pom.xml
+++ b/blog/pom.xml
@@ -56,6 +56,11 @@
         </dependency>
         <dependency>
             <groupId>io.quarkiverse.roq</groupId>
+            <artifactId>quarkus-roq-plugin-serie</artifactId>
+            <version>${quarkus-roq.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkiverse.roq</groupId>
             <artifactId>quarkus-roq-plugin-qrcode</artifactId>
             <version>${quarkus-roq.version}</version>
         </dependency>
