Add logic using DocumentPage for serie

--- a/plugin/asciidoc/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/plugin/asciidoc/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -12,6 +12,7 @@ metadata:
     - generator
     - web
     - roq
+    - ssg
     - asciidoc
     - plugin
   guide: https://docs.quarkiverse.io/quarkus-roq/dev/quarkus-roq-plugins.html#plugin-asciidoc
