--- a/plugin/series/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/plugin/series/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -1,8 +1,9 @@
-name: Roq Plugin Markdown
-description: This plugin allows to use Markdown in ROQ
+name: Roq Plugin Series
+description: This plugin allows you to join multiple posts in a series.
 metadata:
   keywords:
     - website
+    - ssg
     - static
     - generate
     - jekyll
@@ -12,10 +13,9 @@ metadata:
     - generator
     - web
     - roq
-    - ssg
-    - markdown
     - plugin
-  guide: https://docs.quarkiverse.io/quarkus-roq/dev/quarkus-roq-plugins.html#plugin-markdown
+    - series
+  guide: https://docs.quarkiverse.io/quarkus-roq/dev/quarkus-roq-plugins.html#plugin-series
   icon-url: "https://raw.githubusercontent.com/quarkiverse/quarkus-roq/main/docs/modules/ROOT/assets/images/roq.svg"
   categories:
     - "web"
