Series plugin blog post

--- a/blog/data/authors.yml
+++ b/blog/data/authors.yml
@@ -1,7 +1,7 @@
 jtama:
   name: "Jérôme Tama"
   avatar: "https://github.com/jtama.png"
-  job: Ce que je veux
+  job: Architect/Tech Lead
   profile: "https://x.com/jtama_"
   nickname: "jtama"
   bio: "Passionate about Java, Quarkus, containers, and documentation as code, I mainly develop, train, and sometimes contribute to OSS projects"
