--- a/.github/workflows/deploy-blog.yml
+++ b/.github/workflows/deploy-blog.yml
@@ -11,51 +11,26 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
     steps:
       - uses: actions/checkout@v4
-      - name: Set up JDK 17
+
+      ####
+      # We need to build Roq first because we use 999-SNAPSHOT (it's not needed in your website)
+      - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: 17
+          java-version: 21
           distribution: 'temurin'
           cache: 'maven'
       - name: Build Roq
         run: mvn -B clean install -DskipTests
-      - name: Build & Generate Blog
-        working-directory: blog
-        run: QUARKUS_ROQ_GENERATOR_BATCH=true mvn -B package quarkus:run -Dquarkus.profile=gh-pages -DskipTests
-      - name: Upload site as artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: site
-          path: blog/target/roq
-          retention-days: 1          
-  deploy:
-    # Only try and deploy on merged code
-    if: "github.repository == 'quarkiverse/quarkus-roq' && github.ref_name == 'main' && (github.event_name == 'push' || github.event_name == 'schedule' || github.event_name == 'workflow_dispatch')"  
-    runs-on: ubuntu-latest
-    needs: build
-    permissions:
-      pages: write      # to deploy to Pages
-      id-token: write   # to verify the deployment originates from an appropriate source
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    steps:
-      - name: Download Built site
-        uses: actions/download-artifact@v4
-        with:
-          name: site
-          path: _site
-          
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
+      ####
 
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+      - uses: ./action.yml
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
