--- a/.github/workflows/build-pr-preview.yml
+++ b/.github/workflows/build-pr-preview.yml
@@ -1,17 +1,6 @@
-name: Build Sites
+name: Build PR Preview
 
 on:
-  push:
-    branches:
-      - "main"
-    paths-ignore:
-      - '.gitignore'
-      - 'CODEOWNERS'
-      - 'LICENSE'
-      - '*.md'
-      - '*.adoc'
-      - '*.txt'
-      - '.all-contributorsrc'
   pull_request:
     paths-ignore:
       - '.gitignore'
@@ -37,12 +26,10 @@ jobs:
         run: mvn -B install --file pom.xml -DskipTests
 
       - name: Store PR id
-        if: github.event_name == 'pull_request'
         run: |
           echo ${{ github.event.number }} > ./docs/target/generated-docs/pr-id.txt
 
       - name: Publishing docs
-        if: github.event_name == 'pull_request'
         uses: actions/upload-artifact@v4
         with:
           name: docs
@@ -50,12 +37,10 @@ jobs:
           retention-days: 3
 
       - name: Build blog
-        if: github.event_name == 'pull_request'
         run: |
-          QUARKUS_ROQ_GENERATOR_BATCH=true mvn -Dsite.future=true -f blog package quarkus:run
+          QUARKUS_ROQ_GENERATOR_BATCH=true mvn -Dsite.future=true -f blog package quarkus:run -DskipTests
 
       - name: Publishing blog
-        if: github.event_name == 'pull_request'
         uses: actions/upload-artifact@v4
         with:
           name: blog
