--- a/action.yml
+++ b/action.yml
@@ -13,7 +13,7 @@ inputs:
   maven-executable:
     description: 'Choose whether to use mvn or ./mvnw'
     required: false
-    default: 'mvn'
+    default: './mvnw'
   maven-cache:
     description: "Maven cache strategy"
     default: "maven"
@@ -35,6 +35,9 @@ inputs:
   retention-days:
     description: "Retention days for the uploaded artifact"
     default: "1"
+  working-directory:
+    description: "The working directory containing the Roq site"
+    default: "./"
 runs:
   using: "composite"
   steps:
@@ -74,6 +77,7 @@ runs:
     # Step 3: Build Quarkus Blog with Quarkus HTTP Root Path
     - name: Build & Generate Blog
       shell: bash
+      working-directory: ${{ inputs.working-directory }}
       run: |
         ${{ inputs.maven-executable }} -B package quarkus:run \
           ${{ inputs.maven-build-args }} \
@@ -85,6 +89,7 @@ runs:
     # Step 4: Upload Built Site as Artifact
     - name: Upload Site as Artifact
       uses: actions/upload-artifact@v4
+      working-directory: ${{ inputs.working-directory }}
       with:
         name: ${{ inputs.artifact-name }}
         path: ${{ inputs.artifact-path }}
