--- a/.github/workflows/deploy-blog.yml
+++ b/.github/workflows/deploy-blog.yml
@@ -31,7 +31,7 @@ jobs:
         run: mvn -B clean install -DskipTests
       ####
 
-      - uses: ../
+      - uses: ./
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           working-directory: 'blog'
