--- a/action.yml
+++ b/action.yml
@@ -35,8 +35,8 @@ inputs:
   retention-days:
     description: "Retention days for the uploaded artifact"
     default: "1"
-  working-directory:
-    description: "The working directory containing the Roq site"
+  site-directory:
+    description: "The directory containing the Roq site (ending with /)"
     default: "./"
 runs:
   using: "composite"
@@ -78,7 +78,7 @@ runs:
     - name: Build & Generate Blog
       shell: bash
       run: |
-        cd ${{ inputs.working-directory }}
+        cd ${{ inputs.site-directory }}
         ${{ inputs.maven-executable }} -B package quarkus:run \
           ${{ inputs.maven-build-args }} \
           -Dquarkus.http.root-path=${{ env.SITE_PATH }} \
@@ -89,10 +89,9 @@ runs:
     # Step 4: Upload Built Site as Artifact
     - name: Upload Site as Artifact
       uses: actions/upload-artifact@v4
-      working-directory: ${{ inputs.working-directory }}
       with:
         name: ${{ inputs.artifact-name }}
-        path: ${{ inputs.artifact-path }}
+        path: ${{ input.site-directory }}${{ inputs.artifact-path }}
         retention-days: ${{ inputs.retention-days }}
 
     # Step 5: Download Built Site for Deployment
