--- a/action.yml
+++ b/action.yml
@@ -36,7 +36,7 @@ inputs:
     description: "Retention days for the uploaded artifact"
     default: "1"
   site-directory:
-    description: "The directory containing the Roq site (ending with /)"
+    description: "The directory containing the Roq site"
     default: "./"
 runs:
   using: "composite"
@@ -70,15 +70,16 @@ runs:
     - name: Set SITE_URL and SITE_PATH
       shell: bash
       run: |
+        SITE_DIR=${{ inputs.site-url%/}/}
         SITE_URL=${{ inputs.site-url || env.SITE_URL }}
         SITE_PATH=${{ inputs.site-path || env.SITE_PATH }}
-        echo "Using SITE_URL=$SITE_URL and SITE_PATH=$SITE_PATH"
+        echo "Using SITE_DIR=$SITE_DIR, SITE_URL=$SITE_URL and SITE_PATH=$SITE_PATH"
 
     # Step 3: Build Quarkus Blog with Quarkus HTTP Root Path
     - name: Build & Generate Blog
       shell: bash
       run: |
-        cd ${{ inputs.site-directory }}
+        cd ${{ env.SITE_DIR }}
         ${{ inputs.maven-executable }} -B package quarkus:run \
           ${{ inputs.maven-build-args }} \
           -Dquarkus.http.root-path=${{ env.SITE_PATH }} \
@@ -91,7 +92,7 @@ runs:
       uses: actions/upload-artifact@v4
       with:
         name: ${{ inputs.artifact-name }}
-        path: ${{ inputs.site-directory }}${{ inputs.artifact-path }}
+        path: ${{ env.SITE_DIR }}${{ inputs.artifact-path }}
         retention-days: ${{ inputs.retention-days }}
 
     # Step 5: Download Built Site for Deployment
