--- a/action.yml
+++ b/action.yml
@@ -63,9 +63,10 @@ runs:
         if [ -z "$path" ]; then
           path="/"
         fi
-        
-        SITE_URL=${${{ inputs.site-url }}:-$url}
-        SITE_PATH=${${{ inputs.site-path }}:-$path}
+        input_url=${{ inputs.site-url }}
+        input_path=${{ inputs.site-path }}
+        SITE_URL=${$input_url:-$url}
+        SITE_PATH=${$input_path:-$path}
         SITE_DIR=${{ inputs.site-directory }}
         SITE_DIR=${SITE_DIR%/}/
         
