--- a/.github/workflows/deploy-blog.yml
+++ b/.github/workflows/deploy-blog.yml
@@ -31,9 +31,11 @@ jobs:
         run: mvn -B clean install -DskipTests
       ####
 
-      - uses: ./
+      - uses: ./ # replace by quarkiverse/quarkus-roq@...
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          # Those are not needed in most cases:
+          setup-java: 'false'
           site-directory: 'blog'
           maven-executable: 'mvn'
           maven-build-args: '-DskipTests -Dquarkus.profile=gh-pages'
