--- a/action.yml
+++ b/action.yml
@@ -31,7 +31,7 @@ inputs:
     default: "-DskipTests"
   github-pages:
     description: "Whether to configure and Upload GitHub Pages artifact or not"
-    default: true
+    default: 'true'
     required: false
   github-token:
     description: "GitHub token for accessing GitHub Pages url (required if github-pages)"
@@ -72,7 +72,7 @@ runs:
       shell: bash
       run: |
         url=${{ inputs.site-url || env.SITE_FULL_URL }}
-        if [ -z "url" ]; then
+        if [ -z "$url" ]; then
           echo "site-url is required if github-pages=false"
           exit 1
         fi
